<resources>
    <string name="app_name">Djs DINOs</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string-array name="navArray">
        <item>@string/abelisaurus</item>
        <item>@string/agustinia</item>
        <item>@string/albertoceratops</item>
        <item>@string/albertosaurus</item>
        <item>@string/allosaurus</item>
        <item>@string/alvarezsaurus</item>
        <item>@string/alwalkeria</item>
        <item>@string/compsognathus</item>
        <item>@string/diplodocus</item>
        <item>@string/spinosaurus</item>
        <item>@string/stegosaurus</item>
        <item>@string/triceratops</item>
        <item>@string/tyrannosaurus</item>
        <item>@string/velociraptor</item>
    </string-array>
    <string name="abelisaurus">Abelisaurus</string>
    <string name="agustinia">Agustinia</string>
    <string name="albertoceratops">Albertoceratops</string>
    <string name="albertosaurus">Albertosaurus</string>
    <string name="allosaurus">Allosaurus</string>
    <string name="alvarezsaurus">Alvarezsaurus</string>
    <string name="alwalkeria">Alwalkeria</string>
    <string name="compsognathus">Compsognathus</string>
    <string name="diplodocus">Diplodocus</string>
    <string name="spinosaurus">Spinosaurus</string>
    <string name="stegosaurus">Stegosaurus</string>
    <string name="triceratops">Triceratops</string>
    <string name="tyrannosaurus">Tyrannosaurus Rex</string>
    <string name="velociraptor">Velociraptor</string>
    <string name="abelisaurus_info">This dinosaur from South America is part of a group of meat eaters that evolved separately from the more famous Tyrannosaurus on the northern continents.
        It had a high skull and extremely powerful jaw muscles - its jaw could slam shut so fast that its prey did not have time to react.
        Scientists have found a 1 meter (3 feet) long skull but they do not know how large Abelisaurus grew.
    </string>
    <string name="agustinia_info">This sauropod looked like a combination stegosaur, ankylosaur, and porcupine.
        Its skin was covered in armour-like bony lumps, called osteoderms.
        Its back was covered with two rows of spikes that stuck out sideways.
        Some spike were up to 75cm (29 inches) long.
        It also had spikes on its tail and possibly on its neck.
        Agustinia is only known from parts of skeletons. Discoveries of fossils may lead scientists to believe it looked even more strange than we think today.
    </string>
    <string name="albertoceratops_info">This horned dinosaur looked as if it had can-openers at the back of its head, behind its frill.
        These horns protected its frill from being bitten by tyrannosaurs that lived at the same time.
        Shaking oits head from side to side would have moved these spikes like small pickaxes.
        Its face was protected by two long brow horns, which was unusual for this type of dinosaur.
        Albertoceratops was one of the centrosaurines, a group of dinosaurs that had a single large horn over their nose.
    </string>
    <string name="albertosaurus_info">This dinosaur was built just like its closest relative, Tyrannosaurus Rex; but was not as powerful or as tall.
        The two dinosaurs looked almost identical, specially to terrified plant eaters, such as duckbills and horned dinosaurs.
        Albertosaurus had one row of teeth in each jaw but had at least one row of replacement teeth ready to come through.
        It had tiny, two-fingered hands and its arms were too short to put food in its mouth - scientists are not sure what they were used for.
    </string>
    <string name="allosaurus_info">This is one of the most well-known dinosaurs.
        It has become the defining Jurassic meat eater and the model of a carnosaur - a large, heavily built theropod.
        Allosaurus was terrifying at any stage of its life.
        As a baby it ate lizards, mammals and insects.
        As a kid it ate other baby dinosaurs.
        As a teenager it ate anything smaller than itself.
        As an adult it ate everything - what it could not hunt it scavenged.
        Its arms were muscular and its serrated teeth ripped faster than a chainsaw.

        \n\nFeeding the Family&#8230;
        \nAllosaurus roamed the forest of North America 150million years ago.
        It hunted mostly small plant eaters, such as Camptosaurus, and sometimes, giant sauropods, such as Diplodocus.
        These dinosaurs ofter hunted in pairs or packs but they also hunted on their own.

        \n\nAllosaurus Anatomy&#8230;
        \nAllosaurus was well equipped for hunting.
        Strong, grasping claws on its front legs, razor-sharp teeth, and a flexible jaw made this dinosaur a formidable predator.
    </string>
    <string name="alvarezsaurus_info">This rare dinosaur was close to the group of meat eaters that was most related to birds.
        Although it was from South America, it had feathers similar to those of the ornithomimids, or ostrich-like dinosaurs of North America.
        Not much is known about this dinosaur because scientists lack a complete skeleton, but we know it could outrun most other dinosaurs and could catch small prey.
    </string>
    <string name="alwalkeria_info">This unusual dinosaur fromIndia may have eaten both meat and plants.
        Its teeth were unlike those of most other dinosaurs - some were straight and others were curved.
        The most complete skull fossil found is small.
        This could mean the dinosaur was a baby and scientists are yet to find an adult.
        If it was an adult, this dinosaur would have been small enough to sit in your lap.
    </string>
    <string name="compsognathus_info">Compsognathus was a theropod the size of a large turkey, and an active predator of small animals.
        One specimen has a complete lizard inside its stomach - it had been swallowed whole.
        Its relatively small teeth were adapted to grabbing prey but not to slicing them, as bigger theropods\' teeth were.
        Compsognathus was found in the same fossil deposit as the first bird, Archeopteryx, and the famous pterosaurs Rhamphorbynchus and Pterodactylus.
        They all lived in a lagoon-like area.

        \n\nCompsognathus was an agile predator.
        It may have also been two-fingered but the hands found were not intact so scientists cannot be sure.
    </string>
    <string name="diplodocus_info">If the word "sleek" could be applied to a sauropod, then that would describe Diplodocus.
        Its main body weight was slightly larger than that of an elephant.
        Its great length came from its long neck and tail.
        Diplodocus stood on the edge of a river or lake and used its neck like a vacuum cleaner.
        Its pencil-like teeth raked up soft-fiber plants.
        Its food was swallowed whole - sauropods could not chew.

        \n\nBig Reach&#8230;
        \nDiplodocus\'s back legs were longer than its front legs.
        It probably reared up onto its hind legs to reach leaves in taller trees or perhaps to scare off predators.

        \n\nFeet&#8230;
        \nDiplodocus had four big feet to help carry its large weight.
        It also walked on its toes, as elephants do.
    </string>
    <string name="spinosaurus_info">This 12ton predator was a spinosaur. Spinosaurus were unusual Theropods with crocodile-like skulls and a \'sail\' on their back.
        The sail probably helped regulate body temperature and was used as a display for mating and territory disputes.
        The spines along Spinosaurus\'s back were more than 1.8m (6feet) high. It had long hands with long, curved claws.
        It may have used its claws to hunt fish.

        \n\nSpinosaurus was one of the biggest meat-eating dinosaurs ever to have lived. It may have used its sail to cool down its huge body.
        It would have stayed in the shade when it got too hot and pumped warm blood into the skin on its sail.
        The blood cooled down before returning to the rest of its body.
    </string>
    <string name="stegosaurus_info">Stegosaurus is the most famous of all the armoured and plated dinosaurs.
        This dinosaur was designed to defend itself against its main predators, Allosaurus, Ceratosaurus, and Torvosaurus.
        It had 17 large plates and four tail spikes.
        It could not outrun its attackers, in fact, it could not run at all, which is why it relied on defence.
        Even its own throat was protected by more than 100 small bones in the skin.

        \n\nSpikes and Plates&#8230;
        \nStegosaurus used the plates at the end of its tail to swipe at and stab attackers.
        Its plates were used for protection and may have been used to regulate temperature.

        \n\nGiant Plant Eater&#8230;
        \nStegosaurus had a small head and a long nose.
        Its teeth were all at the back of its mouth and its upper and lower teeth ground against each other to cut and slice its food.
        It had a sharp beak at the front of its mouth that was used to cut its food like a a pair of shears would.
        It may have had pouches in its cheeks where it stored food before chewing it.
    </string>
    <string name="label_meaning">Meaning:</string>
    <string name="label_date">Date:</string>
    <string name="label_group">Group:</string>
    <string name="label_diet">Diet:</string>
    <string name="label_size">Size:</string>
    <string name="label_location">Location:</string>
    <string name="placeholder_pro_nun_see_a_shun">(PRO-nun-see-A-shun)</string>
    <string name="placeholder_meaning_text">Meaning Text</string>
    <string name="placeholder_date_text">Date Text</string>
    <string name="placeholder_group_text">Group Text</string>
    <string name="placeholder_diet_text">Diet Text</string>
    <string name="placeholder_size_text">Size Text</string>
    <string name="placeholder_location_text">Location Text</string>
    <string name="placeholder_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel condimentum metus.
        Cras volutpat nibh ipsum, id vehicula ligula rutrum a. Nunc id enim vel ipsum semper eleifend sit amet a ipsum.
        Ut ultricies lacus lacus, quis luctus tortor molestie id. Nam diam ligula, finibus vel convallis eu, pulvinar vel mauris.
        Curabitur sed erat eget urna luctus accumsan malesuada eget magna. Nulla eu odio vitae nibh interdum porttitor vel vitae ex. Proin quis metus velit.\n
        \n
        Quisque convallis erat purus, in finibus felis dapibus vestibulum. Pellentesque posuere consequat finibus.
        Maecenas aliquam malesuada libero vitae faucibus. Curabitur in ex nisi. Donec ac odio at lorem finibus eleifend.
        Nam non volutpat mauris, sed vulputate turpis. Nulla facilisi. Nam ultrices massa ac tortor ornare ultricies.
        Morbi maximus semper finibus. Duis sollicitudin turpis augue, sit amet egestas augue vulputate vel.
        Pellentesque pharetra sed purus eget blandit. Ut tempus neque quis orci accumsan pellentesque.</string>
</resources>